// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/CheckBox CheckBox 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  opacity: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3:before {
  display: none;
  border-radius: 100%;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  content: ' ';
  width: 3rem;
  height: 3rem;
  position: absolute;
}

.emotion-3:hover:before {
  display: block;
  background: rgba(0, 0, 0, 0.05);
}

.emotion-4 {
  border: 0;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
  opacity: 0;
}

.emotion-4+label {
  position: relative;
  cursor: pointer;
  padding: 0;
}

.emotion-4+label:before {
  content: '';
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: inline-block;
  vertical-align: text-top;
  width: 1.5rem;
  height: 1.5rem;
  background: #b7c3d8;
  border-radius: 0.25rem;
}

.emotion-4:disabled+label {
  cursor: not-allowed;
}

.emotion-5 span {
  padding: 0;
}

.emotion-5 svg {
  position: absolute;
  top: 0;
  display: none;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: white;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-7 path {
  fill: white;
}

.emotion-10 {
  border: 0;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
  opacity: 0;
}

.emotion-10+label {
  position: relative;
  cursor: pointer;
  padding: 0;
}

.emotion-10+label:before {
  content: '';
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: inline-block;
  vertical-align: text-top;
  width: 1.5rem;
  height: 1.5rem;
  background: #175BF5;
  border-radius: 0.25rem;
}

.emotion-10:disabled+label {
  cursor: not-allowed;
}

.emotion-11 span {
  padding: 0;
}

.emotion-11 svg {
  position: absolute;
  top: 0;
  display: block;
}

.emotion-14 {
  opacity: 0.3;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-15 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-15:before {
  display: none;
  border-radius: 100%;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  content: ' ';
  width: 3rem;
  height: 3rem;
  position: absolute;
}

.emotion-47 {
  border: 0;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
  opacity: 0;
}

.emotion-47+label {
  position: relative;
  cursor: pointer;
  padding: 0;
}

.emotion-47+label:before {
  content: '';
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: inline-block;
  vertical-align: text-top;
  width: 1.5rem;
  height: 1.5rem;
  background: inherit;
  box-shadow: inset 0px 0px 0px 0.125rem #b7c3d8;
  border-radius: 0.25rem;
}

.emotion-47:disabled+label {
  cursor: not-allowed;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="emotion-2"
      >
        <span
          className="emotion-3"
          onClick={[Function]}
        >
          <input
            checked={false}
            className="emotion-4"
            data-testid="checkbox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            onClick={[Function]}
            type="checkbox"
          />
          <label
            className="emotion-5"
            htmlFor="styled-checkbox-"
          >
            <span
              className="emotion-6"
              onClick={[Function]}
            >
              <span
                className="emotion-7"
              />
            </span>
          </label>
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="emotion-2"
      >
        <span
          className="emotion-3"
          onClick={[Function]}
        >
          <input
            checked={true}
            className="emotion-10"
            data-testid="checkbox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            onClick={[Function]}
            type="checkbox"
          />
          <label
            className="emotion-11"
            htmlFor="styled-checkbox-"
          >
            <span
              className="emotion-6"
              onClick={[Function]}
            >
              <span
                className="emotion-7"
              />
            </span>
          </label>
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="emotion-14"
      >
        <span
          className="emotion-15"
          onClick={[Function]}
        >
          <input
            checked={true}
            className="emotion-10"
            data-testid="checkbox"
            disabled={true}
            id="styled-checkbox-"
            onChange={[Function]}
            onClick={[Function]}
            type="checkbox"
          />
          <label
            className="emotion-11"
            htmlFor="styled-checkbox-"
          >
            <span
              className="emotion-6"
              onClick={[Function]}
            >
              <span
                className="emotion-7"
              />
            </span>
          </label>
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="emotion-2"
      >
        <span
          className="emotion-3"
          onClick={[Function]}
        >
          <input
            checked={true}
            className="emotion-10"
            data-testid="checkbox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            onClick={[Function]}
            type="checkbox"
          />
          <label
            className="emotion-11"
            htmlFor="styled-checkbox-"
          >
            <span
              className="emotion-6"
              onClick={[Function]}
            >
              <span
                className="emotion-7"
              />
            </span>
          </label>
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="emotion-14"
      >
        <span
          className="emotion-15"
          onClick={[Function]}
        >
          <input
            checked={true}
            className="emotion-10"
            data-testid="checkbox"
            disabled={true}
            id="styled-checkbox-"
            onChange={[Function]}
            onClick={[Function]}
            type="checkbox"
          />
          <label
            className="emotion-11"
            htmlFor="styled-checkbox-"
          >
            <span
              className="emotion-6"
              onClick={[Function]}
            >
              <span
                className="emotion-7"
              />
            </span>
          </label>
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="emotion-2"
      >
        <span
          className="emotion-3"
          onClick={[Function]}
        >
          <input
            checked={false}
            className="emotion-4"
            data-testid="checkbox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            onClick={[Function]}
            type="checkbox"
          />
          <label
            className="emotion-5"
            htmlFor="styled-checkbox-"
          >
            <span
              className="emotion-6"
              onClick={[Function]}
            >
              <span
                className="emotion-7"
              />
            </span>
          </label>
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="emotion-14"
      >
        <span
          className="emotion-15"
          onClick={[Function]}
        >
          <input
            checked={false}
            className="emotion-4"
            data-testid="checkbox"
            disabled={true}
            id="styled-checkbox-"
            onChange={[Function]}
            onClick={[Function]}
            type="checkbox"
          />
          <label
            className="emotion-5"
            htmlFor="styled-checkbox-"
          >
            <span
              className="emotion-6"
              onClick={[Function]}
            >
              <span
                className="emotion-7"
              />
            </span>
          </label>
        </span>
      </span>
    </div>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="emotion-2"
      >
        <span
          className="emotion-3"
          onClick={[Function]}
        >
          <input
            checked={false}
            className="emotion-47"
            data-testid="checkbox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            onClick={[Function]}
            type="checkbox"
          />
          <label
            className="emotion-5"
            htmlFor="styled-checkbox-"
          >
            <span
              className="emotion-6"
              onClick={[Function]}
            >
              <span
                className="emotion-7"
              />
            </span>
          </label>
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="emotion-2"
      >
        <span
          className="emotion-3"
          onClick={[Function]}
        >
          <input
            checked={true}
            className="emotion-10"
            data-testid="checkbox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            onClick={[Function]}
            type="checkbox"
          />
          <label
            className="emotion-11"
            htmlFor="styled-checkbox-"
          >
            <span
              className="emotion-6"
              onClick={[Function]}
            >
              <span
                className="emotion-7"
              />
            </span>
          </label>
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="emotion-14"
      >
        <span
          className="emotion-15"
          onClick={[Function]}
        >
          <input
            checked={true}
            className="emotion-10"
            data-testid="checkbox"
            disabled={true}
            id="styled-checkbox-"
            onChange={[Function]}
            onClick={[Function]}
            type="checkbox"
          />
          <label
            className="emotion-11"
            htmlFor="styled-checkbox-"
          >
            <span
              className="emotion-6"
              onClick={[Function]}
            >
              <span
                className="emotion-7"
              />
            </span>
          </label>
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="emotion-2"
      >
        <span
          className="emotion-3"
          onClick={[Function]}
        >
          <input
            checked={true}
            className="emotion-10"
            data-testid="checkbox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            onClick={[Function]}
            type="checkbox"
          />
          <label
            className="emotion-11"
            htmlFor="styled-checkbox-"
          >
            <span
              className="emotion-6"
              onClick={[Function]}
            >
              <span
                className="emotion-7"
              />
            </span>
          </label>
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="emotion-14"
      >
        <span
          className="emotion-15"
          onClick={[Function]}
        >
          <input
            checked={true}
            className="emotion-10"
            data-testid="checkbox"
            disabled={true}
            id="styled-checkbox-"
            onChange={[Function]}
            onClick={[Function]}
            type="checkbox"
          />
          <label
            className="emotion-11"
            htmlFor="styled-checkbox-"
          >
            <span
              className="emotion-6"
              onClick={[Function]}
            >
              <span
                className="emotion-7"
              />
            </span>
          </label>
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="emotion-2"
      >
        <span
          className="emotion-3"
          onClick={[Function]}
        >
          <input
            checked={false}
            className="emotion-47"
            data-testid="checkbox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            onClick={[Function]}
            type="checkbox"
          />
          <label
            className="emotion-5"
            htmlFor="styled-checkbox-"
          >
            <span
              className="emotion-6"
              onClick={[Function]}
            >
              <span
                className="emotion-7"
              />
            </span>
          </label>
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="emotion-14"
      >
        <span
          className="emotion-15"
          onClick={[Function]}
        >
          <input
            checked={false}
            className="emotion-47"
            data-testid="checkbox"
            disabled={true}
            id="styled-checkbox-"
            onChange={[Function]}
            onClick={[Function]}
            type="checkbox"
          />
          <label
            className="emotion-5"
            htmlFor="styled-checkbox-"
          >
            <span
              className="emotion-6"
              onClick={[Function]}
            >
              <span
                className="emotion-7"
              />
            </span>
          </label>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/CheckBox CheckBox with Label 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  opacity: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3:before {
  display: none;
  border-radius: 100%;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  content: ' ';
  width: 3rem;
  height: 3rem;
  position: absolute;
}

.emotion-3:hover:before {
  display: block;
  background: rgba(0, 0, 0, 0.05);
}

.emotion-4 {
  border: 0;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
  opacity: 0;
}

.emotion-4+label {
  position: relative;
  cursor: pointer;
  padding: 0;
}

.emotion-4+label:before {
  content: '';
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: inline-block;
  vertical-align: text-top;
  width: 1.5rem;
  height: 1.5rem;
  background: #b7c3d8;
  border-radius: 0.25rem;
}

.emotion-4:disabled+label {
  cursor: not-allowed;
}

.emotion-5 span {
  padding: 0;
}

.emotion-5 svg {
  position: absolute;
  top: 0;
  display: none;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: white;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-7 path {
  fill: white;
}

.emotion-8 {
  padding-left: 0.25rem;
  font-size: 0.9375rem;
  font-weight: 400;
  color: #191927;
  white-space: nowrap;
}

.emotion-11 {
  border: 0;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
  opacity: 0;
}

.emotion-11+label {
  position: relative;
  cursor: pointer;
  padding: 0;
}

.emotion-11+label:before {
  content: '';
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: inline-block;
  vertical-align: text-top;
  width: 1.5rem;
  height: 1.5rem;
  background: #175BF5;
  border-radius: 0.25rem;
}

.emotion-11:disabled+label {
  cursor: not-allowed;
}

.emotion-12 span {
  padding: 0;
}

.emotion-12 svg {
  position: absolute;
  top: 0;
  display: block;
}

.emotion-16 {
  opacity: 0.3;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-17 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-17:before {
  display: none;
  border-radius: 100%;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  content: ' ';
  width: 3rem;
  height: 3rem;
  position: absolute;
}

.emotion-54 {
  border: 0;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
  opacity: 0;
}

.emotion-54+label {
  position: relative;
  cursor: pointer;
  padding: 0;
}

.emotion-54+label:before {
  content: '';
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: inline-block;
  vertical-align: text-top;
  width: 1.5rem;
  height: 1.5rem;
  background: inherit;
  box-shadow: inset 0px 0px 0px 0.125rem #b7c3d8;
  border-radius: 0.25rem;
}

.emotion-54:disabled+label {
  cursor: not-allowed;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-2"
        >
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <input
              checked={false}
              className="emotion-4"
              data-testid="checkbox"
              disabled={false}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-5"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-6"
                onClick={[Function]}
              >
                <span
                  className="emotion-7"
                />
              </span>
            </label>
          </span>
          <span
            className="emotion-8"
          >
            Not checked single
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-2"
        >
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <input
              checked={true}
              className="emotion-11"
              data-testid="checkbox"
              disabled={false}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-12"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-6"
                onClick={[Function]}
              >
                <span
                  className="emotion-7"
                />
              </span>
            </label>
          </span>
          <span
            className="emotion-8"
          >
            Checked Single
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-16"
        >
          <span
            className="emotion-17"
            onClick={[Function]}
          >
            <input
              checked={true}
              className="emotion-11"
              data-testid="checkbox"
              disabled={true}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-12"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-6"
                onClick={[Function]}
              >
                <span
                  className="emotion-7"
                />
              </span>
            </label>
          </span>
          <span
            className="emotion-8"
          >
            Disabled single
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-2"
        >
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <input
              checked={true}
              className="emotion-11"
              data-testid="checkbox"
              disabled={false}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-12"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-6"
                onClick={[Function]}
              >
                <span
                  className="emotion-7"
                />
              </span>
            </label>
          </span>
          <span
            className="emotion-8"
          >
            Checked intermediate
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-16"
        >
          <span
            className="emotion-17"
            onClick={[Function]}
          >
            <input
              checked={true}
              className="emotion-11"
              data-testid="checkbox"
              disabled={true}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-12"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-6"
                onClick={[Function]}
              >
                <span
                  className="emotion-7"
                />
              </span>
            </label>
          </span>
          <span
            className="emotion-8"
          >
            Disabled checked intermediate
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-2"
        >
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <input
              checked={false}
              className="emotion-4"
              data-testid="checkbox"
              disabled={false}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-5"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-6"
                onClick={[Function]}
              >
                <span
                  className="emotion-7"
                />
              </span>
            </label>
          </span>
          <span
            className="emotion-8"
          >
            Not checked intermediate
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-16"
        >
          <span
            className="emotion-17"
            onClick={[Function]}
          >
            <input
              checked={false}
              className="emotion-4"
              data-testid="checkbox"
              disabled={true}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-5"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-6"
                onClick={[Function]}
              >
                <span
                  className="emotion-7"
                />
              </span>
            </label>
          </span>
          <span
            className="emotion-8"
          >
            Disabled not checked intermediate
          </span>
        </span>
      </div>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-2"
        >
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <input
              checked={false}
              className="emotion-54"
              data-testid="checkbox"
              disabled={false}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-5"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-6"
                onClick={[Function]}
              >
                <span
                  className="emotion-7"
                />
              </span>
            </label>
          </span>
          <span
            className="emotion-8"
          >
            Not checked single
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-2"
        >
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <input
              checked={true}
              className="emotion-11"
              data-testid="checkbox"
              disabled={false}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-12"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-6"
                onClick={[Function]}
              >
                <span
                  className="emotion-7"
                />
              </span>
            </label>
          </span>
          <span
            className="emotion-8"
          >
            Checked Single
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-16"
        >
          <span
            className="emotion-17"
            onClick={[Function]}
          >
            <input
              checked={true}
              className="emotion-11"
              data-testid="checkbox"
              disabled={true}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-12"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-6"
                onClick={[Function]}
              >
                <span
                  className="emotion-7"
                />
              </span>
            </label>
          </span>
          <span
            className="emotion-8"
          >
            Disabled single
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-2"
        >
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <input
              checked={true}
              className="emotion-11"
              data-testid="checkbox"
              disabled={false}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-12"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-6"
                onClick={[Function]}
              >
                <span
                  className="emotion-7"
                />
              </span>
            </label>
          </span>
          <span
            className="emotion-8"
          >
            Checked intermediate
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-16"
        >
          <span
            className="emotion-17"
            onClick={[Function]}
          >
            <input
              checked={true}
              className="emotion-11"
              data-testid="checkbox"
              disabled={true}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-12"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-6"
                onClick={[Function]}
              >
                <span
                  className="emotion-7"
                />
              </span>
            </label>
          </span>
          <span
            className="emotion-8"
          >
            Disabled checked intermediate
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-2"
        >
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <input
              checked={false}
              className="emotion-54"
              data-testid="checkbox"
              disabled={false}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-5"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-6"
                onClick={[Function]}
              >
                <span
                  className="emotion-7"
                />
              </span>
            </label>
          </span>
          <span
            className="emotion-8"
          >
            Not checked intermediate
          </span>
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-16"
        >
          <span
            className="emotion-17"
            onClick={[Function]}
          >
            <input
              checked={false}
              className="emotion-54"
              data-testid="checkbox"
              disabled={true}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-5"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-6"
                onClick={[Function]}
              >
                <span
                  className="emotion-7"
                />
              </span>
            </label>
          </span>
          <span
            className="emotion-8"
          >
            Disabled not checked intermediate
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/CheckBox CheckBox with Props 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  opacity: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3:before {
  display: none;
  border-radius: 100%;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  content: ' ';
  width: 3rem;
  height: 3rem;
  position: absolute;
}

.emotion-3:hover:before {
  display: block;
  background: rgba(0, 0, 0, 0.05);
}

.emotion-4 {
  border: 0;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
  opacity: 0;
}

.emotion-4+label {
  position: relative;
  cursor: pointer;
  padding: 0;
}

.emotion-4+label:before {
  content: '';
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: inline-block;
  vertical-align: text-top;
  width: 1.5rem;
  height: 1.5rem;
  background: #b7c3d8;
  border-radius: 0.25rem;
}

.emotion-4:disabled+label {
  cursor: not-allowed;
}

.emotion-5 span {
  padding: 0;
}

.emotion-5 svg {
  position: absolute;
  top: 0;
  display: none;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: white;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-7 path {
  fill: white;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="emotion-2"
      >
        <span
          className="emotion-3"
          onClick={[Function]}
        >
          <input
            checked={false}
            className="emotion-4"
            data-testid="checkbox"
            disabled={false}
            id="styled-checkbox-"
            onChange={[Function]}
            onClick={[Function]}
            type="checkbox"
          />
          <label
            className="emotion-5"
            htmlFor="styled-checkbox-"
          >
            <span
              className="emotion-6"
              onClick={[Function]}
            >
              <span
                className="emotion-7"
              />
            </span>
          </label>
        </span>
        
      </span>
    </div>
  </div>
</div>
`;
